1.1
- added: record count per artist in artistmenu
- added: submenus in artist menu
- added: handling for user defined record information fields
- changed: fixed some english translations
- changed: notification handler in backend is now based on flash messages
- added: backup/restore database
- added: visitor record statistics
- added: visit counter for detail pages of records
- added: column management for lists
- changed: naming conventions for list cell classes, example: "location-col" -> "cLocation"
- bugfixing: length limitation in backend views for list preset forms
- bugfixing: newslist/signature shows form same artists are now sorted chronologic (and not longer for daytime when they were added)
- bugfixing: signature list supports now full utf8 charset
- added: signature text size is now changeable
- added: backend lists collapseable option
- bugfixing: when a concert has several records, the different versions are sorted now alphabetical