@@ -133,7 +133,6 @@ class BackupController extends AdminController {
                 Yii::app()->user->addMsg(WebUser::ERROR, 'the selected backup file (' . $backupSize . ' Bytes) is bigger than the maximum allowed query size (' . $mySqlMaxSize . ' Bytes). Change your MySQL max_allowed_packet settings to restore this backup: <a href="http://dev.mysql.com/doc/refman/5.1/en/packet-too-large.html">link</a>');
             } else {
 
-
                 //delete all tables
                 Yii::app()->db->createCommand('set foreign_key_checks=0')->execute();
                 $tables = Yii::app()->db->schema->getTableNames();
